--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        apt-get install python-lxml libxml2-dev libxslt-dev
+        sudo apt-get install python-lxml libxml2-dev libxslt-dev
         pip install -r requirements.txt
     - name: Lint with flake8
       run: |
