--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -16,7 +16,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        sudo apt-get install python-lxml libxml2-dev libxslt-dev
+        sudo apt-get install i2c-tools
+        sudo apt-get install libxml2-dev libxslt-dev
+        sudo apt-get install python-smbus
         pip install -r requirements.txt
     - name: Lint with flake8
       run: |
